python = import('python').find_installation(pure: false)

python.install_sources(
    [
        '__init__.py',
        'benchmarks/__init__.py',
        'benchmarks/test_algorithms.py',
        'benchmarks/test_arrays.py',
        'test_algorithms.py',
        'test_arrays.py',
        'test_linked_lists.py'
    ],
    subdir: 'pydatastructs/linear_data_structures/tests',
    install_tag: 'tests'
)
