python = import('python').find_installation(pure: false)

python.install_sources(
    [
        '__init__.py',
        'test_binomial_trees.py',
        'test_disjoint_set.py',
        'test_multiset.py',
        'test_queue.py',
        'test_range_query_dynamic.py',
        'test_range_query_static.py',
        'test_stack.py'
    ],
    subdir: 'pydatastructs/miscellaneous_data_structures/tests',
    install_tag: 'tests'
)
