python = import('python').find_installation(pure: false)

python.install_sources(
    [
        '__init__.py',
        'benchmarks/test_binary_trees.py',
        'test_binary_trees.py',
        'test_heaps.py',
        'test_m_ary_trees.py',
        'test_space_partitioning_tree.py'
    ],
    subdir: 'pydatastructs/trees/tests',
    install_tag: 'tests'
)
